- Fix Indexes for changeDescriptions (#16106)
* - Fix Indexes for changeDescriptions

* use full path to remove

* review comments